After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 794896 - nvenc: fix build warnings with HAVE_NVENC_GST_GL
nvenc: fix build warnings with HAVE_NVENC_GST_GL
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-04-02 12:49 UTC by Daeseok Youn
Modified: 2018-04-02 18:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
nvbaseenc: fix build warnings with HAVE_NVENC_GST_GL (1.54 KB, patch)
2018-04-02 12:50 UTC, Daeseok Youn
committed Details | Review

Description Daeseok Youn 2018-04-02 12:49:38 UTC
fix following error:
gstnvbaseenc.c: In function ‘gst_nv_base_enc_set_context’:
gstnvbaseenc.c:451:17: error: unused variable ‘nvenc’ [-Werror=unused-variable]
   GstNvBaseEnc *nvenc = GST_NV_BASE_ENC (element);
                     ^
Comment 1 Daeseok Youn 2018-04-02 12:50:55 UTC
Created attachment 370438 [details] [review]
nvbaseenc: fix build warnings with HAVE_NVENC_GST_GL
Comment 2 Tim-Philipp Müller 2018-04-02 18:44:33 UTC
Pushed, thanks for the patch!

commit faa892fb489b8dc360c25c94d70b8530ff6d6391
Author: Daeseok Youn <daeseok.youn@gmail.com>
Date:   Mon Apr 2 21:43:53 2018 +0900

    nvbaseenc: fix build warnings with HAVE_NVENC_GST_GL
    
    fix following error:
    gstnvbaseenc.c: In function ‘gst_nv_base_enc_set_context’:
    gstnvbaseenc.c:451:17: error: unused variable ‘nvenc’ [-Werror=unused-variable]
       GstNvBaseEnc *nvenc = GST_NV_BASE_ENC (element);
                     ^
    
    https://bugzilla.gnome.org/show_bug.cgi?id=794896